fix: :lipstick: improve colors in dark mode

--- a/assets/scss/common/_dark.scss
+++ b/assets/scss/common/_dark.scss
@@ -263,7 +263,8 @@ $navbar-dark-active-color:          $link-color-dark;
   color: $link-color-dark;
 }
 
-[data-dark-mode] body .btn-toggle-nav a.active {
+[data-dark-mode] body .btn-toggle-nav a.active,
+[data-dark-mode] body .docs-navigation a.active {
   color: $link-color-dark;
 }
 
